--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "serve:local": "vite --mode localhost",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --fix \"src/**/*.{ts,vue}\"",
+    "format": "prettier -w \"src/**/*.{ts,vue}\""
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -16,14 +18,18 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.2",
+    "typescript": "^5.3.3",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
   }
