--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "sass": "^1.72.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
