--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,18 @@
 {
-  "semi": false,
+  "bracketSpacing": true,
   "singleQuote": true,
+  "printWidth": 80,
+  "semi": false,
+  "tabWidth": 2,
   "trailingComma": "es5",
-  "printWidth": 60,
-  "vueMaxAttributesPerLine": "multiline"
+  "vueMaxAttributesPerLine": {
+    "singleline": {
+      "max": 1,
+      "allowFirstLine": false
+    },
+    "multiline": {
+      "max": 1,
+      "allowFirstLine": false
+    }
+  }
 }
