--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "prettier -w \"src/**/*.{ts,vue}\""
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
