add&mod: リファクタリング、モックデータの追加、カレンダーに作業内容を表示するロジックの追加

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -43,6 +43,7 @@ rules:
       allowHigherOrderFunctions: true
       allowDirectConstAssertionInArrowFunctions: true
       allowConciseArrowFunctionExpressionsStartingWithVoid: false
+  '@typescript-eslint/no-namespace': off
   max-len:
     - error
     - code: 120
