--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "serve:local": "vite --mode localhost",
-    "build": "vue-tsc && vite build && cp _redirects dist/",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --fix \"src/**/*.{ts,vue}\"",
     "format": "prettier -w \"src/**/*.{ts,vue}\""
